# demo_trainee_22_1

./: package.xml  setup.cfg  setup.py
coppelia/: scene.ttt
demo_trainee22_1/: odom.py  planning.py  plot_position.py
launch/: demo.launch  demo.launch.py
params/: ekf_node.yml
